syntax = "proto3";

option csharp_namespace = "microservicesapp";

package pair;

//Service definition for the microservice: PairCalculator
service PairCalculator {
  //Sends a true false if the number is pair or not
  rpc IsItPair (PairRequest) returns (PairReply);
}

//Request message
message PairRequest {
  int64 number = 1;
}

//Response message containing the result
message PairReply {
  bool isPair = 1;
}
